created checkIn domain, updated swagger-ui
